# ray-tracer

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/: CMakeLists.txt  aabb.cpp  aabb.hpp  bvh_node.cpp  bvh_node.hpp  camera.cpp  camera.hpp  checker_texture.cpp  checker_texture.hpp  dielectric.cpp  dielectric.hpp  geometry_object.cpp  geometry_object.hpp  geometryobject.cpp  geometryobject.hpp  hittable.hpp  intersection.cpp  intersection.hpp  lambertian.cpp  lambertian.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  metal.cpp  metal.hpp  moving_sphere.cpp  moving_sphere.hpp  ray.cpp  ray.hpp  raytracer.cpp  raytracer.hpp  solid_color.cpp  solid_color.hpp  sphere.cpp  sphere.hpp  texture.hpp  utils.cpp  utils.hpp
src/camera/: camera.cpp  camera.hpp
src/collisions/: aabb.cpp  aabb.hpp  bvh_node.cpp  bvh_node.hpp  constant_medium.cpp  constant_medium.hpp  hittable.cpp  hittable.hpp  intersection.cpp  intersection.hpp  ray.cpp  ray.hpp  rotation_y.cpp  rotation_y.hpp  translation.cpp  translation.hpp
src/geometry/: cuboid.cpp  cuboid.hpp  geometry_object.cpp  geometry_object.hpp  moving_sphere.cpp  moving_sphere.hpp  quad.cpp  quad.hpp  sphere.cpp  sphere.hpp
src/lighting/: light.cpp  light.hpp
src/materials/: checker_texture.cpp  checker_texture.hpp  dielectric.cpp  dielectric.hpp  diffuse_light.cpp  diffuse_light.hpp  image_texture.cpp  image_texture.hpp  isotropic.cpp  isotropic.hpp  lambertian.cpp  lambertian.hpp  material.cpp  material.hpp  metal.cpp  metal.hpp  noise_texture.cpp  noise_texture.hpp  solid_color.cpp  solid_color.hpp  texture.hpp
src/noise/: perlin.cpp  perlin.hpp
src/utils/: utils.cpp  utils.hpp
tests/: .clang-tidy  CMakeLists.txt  camera_unit_test.cpp  camera_utest.cpp  image_texture_unit_test.cpp  ray_unit_test.cpp  ray_utest.cpp  sphere_unit_test.cpp  sphere_utest.cpp
